updated index and style, finished product

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+
+     
+
 .div1 {
-    color: #f0f;
-    background: blue;
+    color: #666;
+    background: #eee;
     height: 100px;
     width: 100%;
     text-align: center;
@@ -11,8 +14,8 @@
 }
 
 .div2 {
-    color: #f0f;
-    background: blue;
+    color: #666;
+    background: #eee;
     height: 100px;
     width: 100%;
     text-align: center;
@@ -26,18 +29,19 @@
     width: 100%;
 }
 .section {
-    color: #f0f;
-    background: blue;
+    color: #666;
+    background: #eee;
     height: 250px;
     width: 58%;
     text-align: center;
     font-size: 42px;
+    margin-bottom: 20px;
     float: left;
 }
 
 .aside {
-    color:  #f0f;
-    background: blue;
+    color:  #666;
+    background: #eee;
     height: 250px;
     width: 39.5%;
     text-align: center;
@@ -46,8 +50,55 @@
 
 }
 
+.article {
+    color: #eee;
+    background: #666666;
+    color:  #white;
+    height: 66%;
+    width: 94%;
+    margin: 15px;
+    font-size: 34px;
+}
+
+.AH {
+    color: #666;
+    background: #eee;
+    height: 48px;
+    width: 96%;
+    text-align: center;
+    font-size: 28px;
+    margin: 10px
+}
+
+.p {
+    color: #666;
+    background: #eee;
+    height: 48px;
+    width: 96%;
+    text-align: center;
+    font-size: 28px;
+    margin: 10px
+}
+
+.footer {
+    color: #666;
+    background: #eee;
+    height: 100px;
+    width: 100%;
+    text-align: center;
+    margin: 20px;
+    font-size: 42px;
+    clear: both;
+}
+
+
 .container {
     margin: 0 auto;
     width: 1000px;
-    background: grey
+    background: grey;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777;
+    background: #777;
+      width: 960px;
+      font-size: 18px;
 }
